# dji-sdk-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  djiosdk-sample.py  djisdk-sample.py  setup.py  test.py
inc/: Drone.h
src/: Drone.cpp  bindings.cpp  example.cpp  main.cpp
